--- a/chapter1.tex
+++ b/chapter1.tex
@@ -50,7 +50,7 @@ Determine whether the points $(\frac{1}{2}a,0,0,... 0)$, $(0,0,...,0, 2a)$ lie o
 For $(\frac{1}{2}a,0,0,... 0)$ we have $\sum_{j=1}^N(x^{j})^2 - a^2 = -\frac{3a^2}{4} < 0$ and for 
 $(0,0,...,0, 2a)$ \\we have $\sum_{j=1}^N(x^{j})^2 - a^2 = \frac{3a^2}{4} > 0$.\\
 So the points lie on opposite sides of the hyperplane.
-$$\medblackdiamond$$
+$$\blacklozenge$$
 \pagebreak[4]
 
 \section{p6-exercise}
@@ -88,7 +88,7 @@ $$ (-u^1,-u^2, v^1, v^2)$$
 are possible.\\
 Case N=5: 
 There are more equations than variables. If the equations are not linear dependent, no solutions will be found.
-$$\medblackdiamond$$
+$$\blacklozenge$$
 \pagebreak[4]
 \section{p8-exercise}
 
@@ -98,7 +98,7 @@ Show that $(a_{rst}+a_{str}+a_{srt})x^rx^sx^t = 3a_{rst}x^rx^sx^t$
 %\setcounter {equation} {1} %sets the counter to have the specified
 $(a_{rst}+a_{str}+a_{srt})x^rx^sx^t = a_{rst}x^rx^sx^t+a_{rts}x^rx^sx^t+a_{srt}x^rx^sx^t\quad$
 so by just renaming the dummy indices e.g. for the second term  $r \mapsto s\quad$, $s \mapsto t\quad$ and $t \mapsto r\quad$ we get the desired result.
-$$\medblackdiamond$$
+$$\blacklozenge$$
 \pagebreak[4]
 
 \section{p8-exercise}
@@ -128,7 +128,7 @@ Assuming that $a_{rs}$ is not a function of the $x^{s}$, take the partial deriva
 &=(a_{rt}+a_{tr})
 \end{align}
 Replace $x^t$ by $x^s$, and we get the proposed expression.
-$$\medblackdiamond$$
+$$\blacklozenge$$
 \pagebreak[4]
 
 \section{p8-clarification on expression 1.210}
@@ -153,7 +153,7 @@ From 1.209:
 \pdv{x^{,n}}{x^p}{x^{s}}\delta_n^q + \pdv{x^r}{x^{,m}}{x^{,n}}\pdv{x^{,m}}{x^{p}}\pdv{x^{,n}}{x^{s}}\pdv{x^{,q}}{x^{r}}=  0\\
 \Leftrightarrow\pdv{x^{,q}}{x^p}{x^{s}} + \pdv{x^r}{x^{,m}}{x^{,n}}\pdv{x^{,m}}{x^{p}}\pdv{x^{,n}}{x^{s}}\pdv{x^{,q}}{x^{r}}= 0
 \end{gather} 
-$$\medblackdiamond$$
+$$\blacklozenge$$
 \pagebreak[4]
 
 
@@ -176,7 +176,7 @@ C^{i}_{j}  &= A^{i}_{k}B^{k}_{j} \\
 &= \delta^{i}_{k}
 \end{align}
 So $C = JJ^{,}\quad$becomes the unity matrix. 
-$$\medblackdiamond$$
+$$\blacklozenge$$
 \pagebreak[4]
 
 \section{p11-exercise}
@@ -212,7 +212,7 @@ Multiply (8) with $\partial_{x^s}{x^{,p}}$, then
 and thus 
 $$\dv{x^{,q}}{x^{,p}} = \frac{T^{,q}}{T^{,p}}$$
 
-$$\medblackdiamond$$
+$$\blacklozenge$$
 \pagebreak[4]
 
 
@@ -248,7 +248,7 @@ Multiply (7) by $\pdv{x^{p}}{x^{,w}}$
 Giving
 $$T^{nmp} =  T^{,uvw}\pdv{x^{n}}{x^{,u}}\pdv{x^{m}}{x^{,v}}\pdv{x^{p}}{x^{,w}} $$
 
-$$\medblackdiamond$$
+$$\blacklozenge$$
 \pagebreak[4]
 
 \section{p14-exercise}
@@ -300,7 +300,7 @@ Using the same reasoning as in (1) to (2) we need
 $$\pdv{x^{,i}}{x^{r}}\pdv{x^{,j}}{x^{s}}\dots \pdv{x^{,n}}{x^{w}} =\pdv{x^{r}}{x^{,i}}\pdv{x^{s}}{x^{,j}}\dots \pdv{x^{w}}{x^{,n}}$$
 As the conclusion (18) is independent of the order of the tensor, it is obvious that the above equality yields. Hence, the answer is YES.
 
-$$\medblackdiamond$$
+$$\blacklozenge$$
 \pagebreak[4]
 
 \section{p16-exercise}
@@ -334,7 +334,7 @@ $$V^n_{k} = \frac{n!}{(n-k)!} \text{ giving } V^4_{3} = \frac{4!}{(4-3)!} = 24 $
 The constraint (1) gives us 24 equations but as  $A_{rst} = -A_{rts}$ only 12 equations have to be considered. So, with the  additional constraints the DOF becomes 24-12 = 12.\\
 As i) and ii) are independent and excluding events we can add the DOF of both events and we get 8+12 = 20 DOF.
 
-$$\medblackdiamond$$
+$$\blacklozenge$$
 \pagebreak[4]
 
 \section{p16-exercise}
@@ -358,7 +358,7 @@ Consider the quadratic form $\phi = a_{ij}x^ix^j$\\
 Be $A_{ij} = (a_{ij})$ and $B_{ij} = (x^ix^j)$, then it is obvious that $B_{ij}$ is symmetric and that $C_{ij} = -A_{ij}$ is the form where $-a_{ij}$ is replaced by its symmetric part (skew-symmetric).
 Hence $\phi = a_{ij}x^ix^j =a_{ij}b^{ij}= 0$ and so is $\phi = c_{ij}b^{ij}= 0$ 
 
-$$\medblackdiamond$$
+$$\blacklozenge$$
 \pagebreak[4]
 
 \section{p18-exercise}
@@ -372,7 +372,7 @@ $$\delta^{m}_{m},  \delta^{m}_{n} \delta^{n}_{m},  \delta^{m}_{n} \delta^{n}_{r}
 \delta^{m}_{n} \delta^{n}_{m} = \delta^{m}_{m} = N\\
 \delta^{m}_{n} \delta^{n}_{r} \delta^{r}_{m} = \delta^{m}_{n} \delta^{n}_{m} = \delta^{m}_{m} = N
 \end{align}
-$$\medblackdiamond$$
+$$\blacklozenge$$
 \pagebreak[4]
 
 \section{p19-exercise}
@@ -403,7 +403,7 @@ As $X^{r}$, $Y^{r}$ are arbitrary contravariant vectors, we conclude that
 \Leftrightarrow a_{ij} =  a^{,}_{rs}\pdv{x^{,r}}{x^{i}}\pdv{x^{,s}} {x^{j}}
 \end{align}
 (8) = (1): OK
-$$\medblackdiamond$$
+$$\blacklozenge$$
 \pagebreak[4]
 
 \section{p19-exercise}
@@ -432,7 +432,7 @@ So (4) in (3) gives
 \Leftrightarrow P^{,}_{r} = \underbrace{A^{mn}_{k }\pdv{x^{,p}}{x^{m}}\pdv{x^{,s}}{x^{n}}\pdv{x^{k}}{x^{,r}}}_\text{(*)}X^{,}_{ps}
 \end{align}
 Putting (*) as $ A^{,ps}_{r }= A^{mn}_{k }\pdv{x^{,p}}{x^{m}}\pdv{x^{,s}}{x^{n}}\pdv{x^{k}}{x^{,r}}$ we see that (6) has the form (2) and that $A^{,ps}_{r }$ obeys the rule of a mixed tensor (1).
-$$\medblackdiamond$$
+$$\blacklozenge$$
 \pagebreak[4]
 
 \section{p21-exercise}
@@ -513,7 +513,7 @@ E.g. $srt$
 &= - B_{rst}
 \end{align}
 The same calculations can be done for the other permutations.
-$$\medblackdiamond$$
+$$\blacklozenge$$
 \pagebreak[4]
 
 \section{p23-exercise 1.}
@@ -541,7 +541,7 @@ This means $u^i = \phi^i(u^4)$ for i=1,2,3 and thus we can write
 \end{align}
 This means that in (1) the three first columns a not linearly independent and thus have   $\left|\pdv{x^r}{u^s}\right| = 0$
 
-$$\medblackdiamond$$
+$$\blacklozenge$$
 \pagebreak[4]
 
 \section{p23-exercise 2.}
@@ -552,20 +552,21 @@ Find the Jacobian of the transformation. Where is it zero or infinite?
 
 \begin{figure}[h]
 \centering
-\begin{minipage}[t]{.4\textwidth}
+\begin{minipage}[t]{.6\textwidth}
 %\centering
 \vspace{0pt}
-\includegraphics[scale=.6]{spherical.jpg}
+\input{D:/MathLatex/images/fig_p23_117_a.tex}
 \end{minipage}\hfill
-\begin{minipage}[t]{0.4\textwidth}
+\begin{minipage}[t]{0.3\textwidth}
 %\centering
 \vspace{50pt}
 $\left\{ \begin{array}{c}
     x= r\sin \theta \cos \phi \\
      y= r\sin \theta\sin \phi \\
       z= r\cos\theta 
-  \end{array} \right\}$
+  \end{array} \right.$
 \end{minipage}
+\caption{Spherical coordinate system}
 \end{figure}
 Partial differentiating of (x,y,z) with respect to (r,$\theta$,$\phi$) gives the Jacobian
 \begin{align}
@@ -580,7 +581,7 @@ Partial differentiating of (x,y,z) with respect to (r,$\theta$,$\phi$) gives the
 \  &= r^2\sin \theta 
 \end{align}
 J=0: for $r=0$ or $\theta = 0_{\ r \epsilon (-\infty, +\infty)}$ and $J\rightarrow \pm\infty$ or $\mp\infty$ for $r\rightarrow \pm\infty|_{\theta\neq 0}$. But what about the case $r\rightarrow \pm\infty|_{\theta\rightarrow 0}$? This case is not determined as long as no path is chosen in the $(r,\theta)$ configuration space.
-$$\medblackdiamond$$
+$$\blacklozenge$$
 \pagebreak[4]
 
 \section{p23-exercise 3.}
@@ -607,7 +608,7 @@ Be $x^{\alpha}$ the components of a contravariant vector in spherical polar coor
     \ A^{3}\\\\
   \end{array} } \right]
 \end{align}
-$$\medblackdiamond$$
+$$\blacklozenge$$
 \pagebreak[4]
 
 \section{p23-exercise 4.}
@@ -618,7 +619,7 @@ In a space of three dimensions, how many different expressions are represented b
 As we have $V_{3}$ and considering that in $A^{m}_{np} B^{pq}_{rs}C^{s}_{tu}$ the six indices m, n, q, r, t, u are not dummy indices, we get $3^{6}$ different expressions (first choose m: you have three choices, then n: also three choices giving 3x3 possibilities, etc for q, r, t, u).\\
 For the second question, as in $A^{m}_{np} B^{pq}_{rs}$ there is only summation on over index (p) we get three terms for this part. As the summation with $A^{m}_{np} B^{pq}_{rs}$ and $C^{s}_{tu}$ occurs only on one index also (s) we get 3x3 terms in the expression.
 
-$$\medblackdiamond$$
+$$\blacklozenge$$
 \pagebreak[4]
 
 \section{p23-exercise 5.}
@@ -641,7 +642,7 @@ To simplify the notation, we put $A(x^{\rho}) = A^{,}$ and $A(x^{j}) = A^{,}$ th
 \Leftrightarrow \pdv{A}{x^{i}}{x^{j}} &= \pdv{A^{,}}{x^{\rho}}{x^{\gamma}}\pdv{x^{\gamma}}{x^{j}}\pdv{x^{\rho}}{x^{i}}+ \pdv{A^{,}}{x^{\rho}}\pdv{x^{\rho}}{x^{i}}{x^{j}}
 \end{align}
 The first term on the right side, behaves as covariant tensor but the presence of the second term makes that generally, $\pdv{A}{x^{i}}{x^{j}}$ has not a tensor character. This is only when $\pdv{A^{,}}{x^{\rho}}\pdv{x^{\rho}}{x^{i}}{x^{j}}=0$, which means that $x^{\rho}, x^{i}$ are a linear map of each other.
-$$\medblackdiamond$$
+$$\blacklozenge$$
 \pagebreak[4]
 
 \section{p23-exercise 6.}
@@ -671,7 +672,7 @@ As we have a contravariant tensor field :
     0 & 4 \\ 
     \end{array} } \right]$$
     
-    $$\medblackdiamond$$
+    $$\blacklozenge$$
 \pagebreak[4]
 
 \section{p24-exercise 7.}
@@ -690,7 +691,7 @@ Now, swap the dummy indices r and s in the second term on the right and as $T_{m
 \ T_{\alpha\beta\gamma\delta}+T_{\alpha\beta\delta\gamma} &= T_{mnrs}\pdv{x^{m}}{x^{\alpha}}\pdv{x^{n}}{x^{\beta}}\pdv{x^{r}}{x^{\gamma}}\pdv{x^{s}}{x^{\delta}}+ T_{mnsr}\pdv{x^{m}}{x^{\alpha}}\pdv{x^{n}}{x^{\beta}}\pdv{x^{s}}{x^{\delta}}\pdv{x^{r}}{x^{\gamma}}\\
 &= (T_{mnrs}+ T_{mnsr})\pdv{x^{m}}{x^{\alpha}}\pdv{x^{n}}{x^{\beta}}\pdv{x^{s}}{x^{\delta}}\pdv{x^{r}}{x^{\gamma}}\\&=0
 \end{align}
-$$\medblackdiamond$$
+$$\blacklozenge$$
 \pagebreak[4]
 
 \section{p24-exercise 8.}
@@ -728,7 +729,7 @@ And thus,
 \ \Rightarrow \partial_{\beta} A_{\alpha}  - \partial_{\alpha} A_{\beta} &=  (\partial_sA_r - \partial_rA_s)X^r_{\alpha}X^s_{\beta}
 \end{align}
 So, i) and (10) proves that $\pdv{A_{r}}{x^{s}} - \pdv{A_{s}}{x^{r}}$ is skew-symmetric tensor of the second order.
-$$\medblackdiamond$$
+$$\blacklozenge$$
 \pagebreak[4]
 
 \section{p24-exercise 9.}
@@ -774,7 +775,7 @@ If we consider the $\overline{x}^r$ coordinate system as the $x^{\sigma }$ coord
 \text{(10) and (19)   } \Rightarrow \pdv{x^{\alpha}}{y^{\beta}} &= \pdv{x^r}{y^s}\pdv{y^{\alpha}}{y^r}\pdv{y^s}{y^{\beta }}
 \end{align}
 So $A(r,s) = \pdv{x^r}{y^s}$ is a mixed tensor of type $A_s^r$
-$$\medblackdiamond$$
+$$\blacklozenge$$
 \pagebreak[4]
 
 \section{p24-exercise 10.}
@@ -805,7 +806,7 @@ $$\left|\pdv{x^m}{y^n}\right|\left|\pdv{y^r}{z^s}\right| = \left|\pdv{x^t}{z^u}\
   \end{array}} \right]\\
   \ & \Rightarrow \left|\pdv{x^m}{y^n}\right|\left|\pdv{y^r}{z^s}\right| = \left|\pdv{x^t}{z^u}\right|
   \end{align}
-$$\medblackdiamond$$
+$$\blacklozenge$$
 \pagebreak[4]
 
 
@@ -830,7 +831,7 @@ Prove that with respect to transformations $$ x^{,r} = C_{rs}x^s$$ where the coe
  \Rightarrow   C_{tq} &= \pdv{x^{q}}{x^{,t}} \text{  or  }  C_{rs} = \pdv{x^{s}}{x^{,r}}\\
  \text{  as  } A_{,r} = A_{s}\pdv{x^{s}}{x^{,r}} \Rightarrow A_{,r} &= C_{rs}\pdv{x^{s}}{x^{,r}}
   \end{align}
-$$\medblackdiamond$$
+$$\blacklozenge$$
 \pagebreak[4]
 
 
@@ -865,7 +866,7 @@ Hence, (4) becomes
 \text{(3) and  (8) gives}\quad \pdv{ln\left|A\right|}{A_{ij}} &= \frac{(A^{-1}_{ij})^T \left|A\right|}{\left|A\right|} = (A^{-1}_{ij})^T \\
 \Rightarrow (ln\left|A\right|)^, &= (A^{-1})^T
 \end{align}
-\end{lemma}$$\meddiamond$$
+\end{lemma}$$\diamond$$
 
 Now the main proof:\\
 Let, 
@@ -878,7 +879,7 @@ Let,
 \text{(13) can be written as }  \pdv{ln\left|A\right|}{x^r} &=  \pdv{x^n}{y^m}\pdv{a_{mn}}{x^r}\\
 \Rightarrow \pdv{ln\left|A\right|}{x^r} &=  \pdv{x^n}{y^m}\pdv{y^m}{x^r}{x^n}
 \end{align}
-$$\medblackdiamond$$
+$$\blacklozenge$$
 \pagebreak[4]
 
 \section{p25-exercise 13.}
@@ -909,7 +910,7 @@ We know that
 \Rightarrow \quad v^{\alpha} = v^r\pdv{x^{\alpha}}{x^r}
 \end{align}
 So $v^r$ is a contravariant vector in general. Note that this proof is more straightforward than the prove in i).
-$$\medblackdiamond$$
+$$\blacklozenge$$
 \pagebreak[4]
 
 \section{p25-exercise 14.}
@@ -924,7 +925,7 @@ From exercise 13. we know that
  &= \dv[2]{x^r}{t}\pdv{x^{\alpha}}{x^r}+ \pdv{x^{\alpha}}{x^r}{x^m}\dv{x^m}{t}\dv{x^r}{t} 
  \end{align}
  The second term on the right does not vanish in general, hence $\dv[2]{x^r}{t}$ has not a tensor character.
-$$\medblackdiamond$$
+$$\blacklozenge$$
 \pagebreak[4]
 
 \section{p25-exercise 15.}
@@ -986,7 +987,7 @@ Considering (10) we see that $\left[ { \begin{array}{cc}
   \ p &  q\\
   \ q  & r\\
   \end{array}} \right]$ according the rules of a covariant tensor of order two.
-$$\medblackdiamond$$
+$$\blacklozenge$$
 \pagebreak[4]
 
 \section{p25-exercise 16.}
@@ -1062,7 +1063,7 @@ So the object $(K_{ij})\equiv K^{ij}$ transforms according (12) like a contravar
 
 Now, consider $|K^{ij}|$, obviously $|K^{ij}| = (x^1)^2(x^2)^2-(x^1)(x^2)(x^2)(x^1) =0$, but so is also $|K^{,ij}|$.
 $$\Rightarrow\quad |K^{ij}| \text{ is an invariant under the considered transformation}$$. 
-$$\medblackdiamond$$
+$$\blacklozenge$$
 \pagebreak[4]
 
 \section{p25-exercise 17.}
@@ -1085,5 +1086,5 @@ Swap the indices three times
 \text{(3) - (5) + (7):} \quad 2\underbrace{f_{mnr}}_\text{*} &= -S_{rmn}+S_{nrm}-S_{mnr}\\
 \ \Leftrightarrow f_{mnr} &= \frac{-S_{rmn}+S_{nrm}-S_{mnr}}{2}
 \end{align}
-$$\medblackdiamond$$
+$$\blacklozenge$$
 \pagebreak[4]
