--- a/chapter3.tex
+++ b/chapter3.tex
@@ -110,3 +110,35 @@ Putting it all together the number of independent components of $R_{rsmn}$ becom
 \end{align}
 $$\blacklozenge$$
 \newpage
+
+
+\section{p82 - Exercise}
+\begin{tcolorbox}
+Cylindar
+\end{tcolorbox}
+\begin{figure}[h]
+%\centering
+\begin{minipage}[t]{.4\textwidth}
+%\centering
+\vspace{0pt}
+%\includegraphics[scale=.5]{p85_ex1.png}
+\input{D:/MathLatex/images/fig_p82_none_a.tex}
+\end{minipage}\hfill
+\end{figure}
+$$\blacklozenge$$
+\newpage
+
+\section{p83 - clarification}
+\begin{tcolorbox}
+$V_2$ from fammily of geodesics
+\end{tcolorbox}
+\begin{figure}[h]%
+    \centering
+    \subfloat[]{{\includegraphics[width=6cm]{p87_a} }}%
+    \qquad
+    \subfloat[]{{\includegraphics[width=6cm]{p87_c} }}%
+    %\caption{2 Figures side by side}%
+    \label{fig:example}%
+\end{figure}
+$$\blacklozenge$$
+\newpage
