--- a/chapter2.tex
+++ b/chapter2.tex
@@ -2014,7 +2014,7 @@ In a plane, let $x^1, \  x^2$ be the distances of a general point from the point
 \begin{figure}[h]
 %\includegraphics[scale=.4]{Bipolar.jpg}
 \input{D:/MathLatex/images/fig_p79_260_a.tex}
-
+\caption{Bipolar coordinates}
 \end{figure}
 \begin{align}
 \ (x^1)^2 &= \left( y^1-1\right) ^2 + \left(y^2\right)^2\\
@@ -2059,7 +2059,7 @@ We use plane geometry to express expression (11) as  a function of only $(x^1,x^
 \begin{figure}[h]
 %\includegraphics[scale=.4]{Bipolar2.jpg}
 \input{D:/MathLatex/images/fig_p79_260_b.tex}
-
+\caption{Bipolar coordinates versus Cartesian coordinates}
 \end{figure}
 \begin{align}
 \ \left |  OP \right |^2 &= \frac{(x^1)^2+(x^2)^2}{2} - \underbrace{\frac{\left | AB \right|^2}{4}}_{=1}\\
