--- a/main.tex
+++ b/main.tex
@@ -1,60 +1,49 @@
 \documentclass{ut-thesis}
+
+%**************************** General libraries *******************************
 \usepackage{mathtools}
-\usepackage{xcolor,cancel}
+\usepackage{cancel}
 \usepackage[utf8]{inputenc} 
 \usepackage{amssymb}
 \usepackage{ntheorem}
 \usepackage{tensor}
 %\usepackage{physics}
 \usepackage[italicdiff]{physics}
-%\usepackage{mathtools}
 \usepackage{calc}
 \usepackage{caption}
 %\usepackage{subcaption}
-\newsavebox\CBox
-\newcommand\hcancel[2][0.5pt]{%
-  \ifmmode\sbox\CBox{$#2$}\else\sbox\CBox{#2}\fi%
-  \makebox[0pt][l]{\usebox\CBox}%  
-  \rule[0.5\ht\CBox-#1/2]{\wd\CBox}{#1}}
 \usepackage{tcolorbox}
 \usepackage{chngcntr}
 \usepackage{titlesec}
 \usepackage {graphicx,float} 
 \usepackage{subfig}
-\graphicspath{ {D:/MathLatex/images/} }
+\usepackage{siunitx}
+\usepackage{xcolor}
+\usepackage{etoolbox} %ifthen
+\usepackage[outline]{contour} % glow around text
+
+%**************************** Tikz libraries *******************************
 \usepackage{tikz}
 \usetikzlibrary{shapes,arrows,arrows.meta,spy}
 \usetikzlibrary{calc}% needed for BB
 \usepackage{pgfplots}
-\usepackage{siunitx}
-\usepackage{physics}
-\usepackage{xcolor}
-\usepackage{etoolbox} %ifthen
-\usepackage[outline]{contour} % glow around text
-%\usetikzlibrary{arrows,arrows.meta}
 \usetikzlibrary{math} % for \tikzmath
 \usetikzlibrary{angles,quotes} % for pic (angle labels)
 \usetikzlibrary{decorations.pathmorphing,decorations.markings}
 \usetikzlibrary{decorations.pathreplacing} % for curly braces
 \usetikzlibrary {decorations.markings,shapes.arrows}
 \usepackage{tikz-3dplot}
-\begin{comment}
-\tikzset{
-    circ/.style={draw, circle,inner sep=0pt,minimum size=8mm, font=\scriptsize},
-    triangle/.tip={Computer Modern Rightarrow[open,angle=120:3pt]}
-}
-\tikzset{
-  every point/.style = {circle, inner sep={.75\pgflinewidth}, opacity=1, draw, solid, fill=white},
-  point/.style={insert path={node[every point, #1]{}}}, point/.default={},
-  colored point/.style = {point={fill=#1}},
-  point name/.style = {insert path={coordinate (#1)}},
-  inherit/.style = {point/.style={insert path={node[circle, inner sep={.75\pgflinewidth}, draw, fill, #1]{}}}}
-}
-\end{comment}
+
 %\usepackage[margin=0cm,nohead]{geometry}
 %\usepackage[active,tightpage]{preview}
-
 %\usepackage[pdf]{pstricks}
+
+%**************************** custom macro's *******************************
+\newsavebox\CBox
+\newcommand\hcancel[2][0.5pt]{%
+  \ifmmode\sbox\CBox{$#2$}\else\sbox\CBox{#2}\fi%
+  \makebox[0pt][l]{\usebox\CBox}%  
+  \rule[0.5\ht\CBox-#1/2]{\wd\CBox}{#1}}
 %\newcommand{\edal}{\end{align}}
 %\newcommand{\bgal}{\begin{align}\end{align}}
 \newcommand{\Lagr}{\mathcal{L}}
@@ -68,6 +57,8 @@
 \newcommand\maal{\boldsymbol{\times}}
 \newcommand\spatie{\quad\quad\quad\quad}
 \newcommand\RAr{\quad\Rightarrow\quad}
+
+%**************************** layout setings *******************************
 \counterwithin*{equation}{chapter}
 \counterwithin*{equation}{section}
 \counterwithin*{equation}{subsection}
@@ -75,9 +66,28 @@
 \titleformat{\chapter}{\normalfont\huge}{\thechapter.}{20pt}{\huge\it}
 \titleformat{\chapter}[display]
   {\normalfont\bfseries}{}{0pt}{\Huge}
-  
 \titlespacing*{\chapter}{0pt}{50pt}{*2}
 
+%**************************** Tikz  setings *******************************
+\begin{comment}
+\tikzset{
+    circ/.style={draw, circle,inner sep=0pt,minimum size=8mm, font=\scriptsize},
+    triangle/.tip={Computer Modern Rightarrow[open,angle=120:3pt]}}
+    
+\tikzset{
+  every point/.style = {circle, inner sep={.75\pgflinewidth}, opacity=1, draw, solid, fill=white},
+  point/.style={insert path={node[every point, #1]{}}}, point/.default={},
+  colored point/.style = {point={fill=#1}},
+  point name/.style = {insert path={coordinate (#1)}},
+  inherit/.style = {point/.style={insert path={node[circle, inner sep={.75\pgflinewidth}, draw, fill, #1]{}}}}
+}
+\end{comment}
+
+%**************************** Where to find images *****************************
+\graphicspath{ {D:/MathLatex/images/} }
+
+
+%**************************** Document itself *******************************
 \author{Bernard Carrette}
 \gradyear{2020}
 \title{Tensor Calculus\\J.L. Synge and A.Schild (Dover Publication)\\ Solutions to exercises}
@@ -85,6 +95,7 @@
 \maketitle
 
 \section*{Remarks and warnings}
+You're welcome to use these notes, but they may contain errors, so proceed with caution. If you do find an error, however, I'd be happy to receive bug reports, suggestions, and the like through Github.
 \section*{Some notation conventions}
 \begin{center}
 \begin{tabular}{ c c  }
@@ -100,8 +111,8 @@ m n\\
 
 \tableofcontents
 \listoffigures
-%\include{chapter1}
-%\include{chapter2}
+\include{chapter1}
+\include{chapter2}
 \include{chapter3}
 %\include{chapter4}
 %\include{chapter5}
